# RustsTests

./: .gitignore  Cargo.toml  README.md
db/: .gitignore
rust_code/: .gitignore  Cargo.toml
rust_code/src/: log.rs  main.rs
rust_code/src/database/: mod.rs
rust_code/src/web_server/: mod.rs
src/: main.rs
src/log/: mod.rs
web/: 404.html  index.html  temp_table.js
