[package]
name = "rusts_test_project"
version = "0.1.0"
authors = ["Victor Dominguez <vdominguez1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
threadpool = "1.8.1"
rusqlite = "0.23.1"